update api,doc
