# resources/static/api.yaml
@@ -5,6 +5,7 @@ info:
 paths:
   /network:
     get:
+      deprecated: true
       tags:
         - Network
       summary: Get network stats
@@ -32,6 +33,7 @@ paths:
                     type: number
   /market:
     get:
+      deprecated: true
       tags:
         - Market
       summary: Get market stats
@@ -53,6 +55,7 @@ paths:
                     type: number
   /epoch:
     get:
+      deprecated: true
       tags:
         - Epoch
       summary: Get epoch stats
@@ -87,7 +90,6 @@ paths:
           required: false
           schema:
             type: number
-          example: {page: 1, limit: 50}
       tags:
         - "Accounts"
       summary: get accounts
@@ -110,16 +112,13 @@ paths:
                           type: string
                         balance:
                           type: number
-                        delegated:
-                          type: number
-                        undelegated:
+                        created_at:
                           type: number
                 example: {
                   count: 150000, accounts: [{
                     address: "erd1v0kjtd6cl9zmjsjel3camkkduxdjvdlpxcg0hqz6t2ccq8vgfe9s9ffvj0",
-                    balance: 200.5,
-                    delegated: 20.5,
-                    undelegated: 10.5,
+                    balance: "200.5",
+                    created_at: 1623945181,
                   }]}
         404:
           description: "Not found"
@@ -131,8 +130,6 @@ paths:
           required: true
           schema:
             type: string
-          example:
-            address: "erd1v0kjtd6cl9zmjsjel3camkkduxdjvdlpxcg0hqz6t2ccq8vgfe9s9ffvj0"
       tags:
         - "Accounts"
       summary: get account by address
@@ -154,15 +151,26 @@ paths:
                     type: number
                   rewards_claimed:
                     type: number
-                  staking_provider:
+                  claimable_rewards:
+                    type: number
+                  nonce:
+                    type: number
+                  staking_providers:
+                    type: array
+                    items:
+                      type: string
+                  created_at:
                     type: number
                 example: {
                   address: "erd1v0kjtd6cl9zmjsjel3camkkduxdjvdlpxcg0hqz6t2ccq8vgfe9s9ffvj0",
-                  balance: 200.5,
-                  delegated: 20.5,
-                  undelegated: 10.5,
-                  rewards_claimed: 4.4,
-                  staking_provider: "Everstake"
+                  balance: "200.5",
+                  delegated: "20.5",
+                  undelegated: "10.5",
+                  rewards_claimed: "1.5",
+                  claimable_rewards: "2.5",
+                  nonce: 5,
+                  staking_providers: ["erd1qqqqqqqqqqqqqpgqp699jngundfqw07d8jzkepucvpzush6k3wvqyc44rx"],
+                  created_at: 1623945181,
                 }
         404:
           description: "Not found"
@@ -184,7 +192,6 @@ paths:
           required: false
           schema:
             type: number
-          example: {address: "erd1v0kjtd6cl9zmjsjel3camkkduxdjvdlpxcg0hqz6t2ccq8vgfe9s9ffvj0", page: 1, limit: 50}
       tags:
         - "Transactions"
       summary: get transactions, optionally by address
@@ -198,7 +205,7 @@ paths:
                 properties:
                   count:
                     type: number
-                  txs:
+                  items:
                     type: array
                     items:
                       $ref: '#/components/schemas/tx'
@@ -234,7 +241,7 @@ paths:
                   value:
                     type: number
                   fee:
-                    type: number
+                    type: string
                   gas_used:
                     type: number
                   miniblock_hash:
@@ -263,15 +270,15 @@ paths:
                     status: "pending",
                     from: "erd16x7le8dpkjsafgwjx0e5kw94evsqw039rwp42m2j9eesd88x8zzs75tzry",
                     to: "erd1v0kjtd6cl9zmjsjel3camkkduxdjvdlpxcg0hqz6t2ccq8vgfe9s9ffvj0",
-                    value: 0.000035,
-                    fee: 0.000035,
-                    gas_used: 0.000035,
+                    value: "0.000035",
+                    fee: "0.000035",
+                    gas_used: 5000000200,
                     miniblock_hash: "e51e2a60d7bb16ee587fe87a871f3de4840fe8bf152d3dc0d04deb94aff97692",
                     timestamp: 1623945181,
                     scResults: {
                       from: "erd1qqqqqqqqqqqqqqqpqqqqqqqqqqqqqqqqqqqqqqqqqqqqq28llllsu54ydr",
                       to: "erd1kwl4vr0w46dvpq85ajcz9rqxjnyf93wqnmwhqztcu0pjnsmfvx9qxdavhh",
-                      value: 2.0,
+                      value: "2.0",
                       data: "@user error",
                       message: "total delegation cap reached"
                     }}
@@ -303,7 +310,7 @@ paths:
                 properties:
                   count:
                     type: string
-                  blocks:
+                  items:
                     type: array
                     items:
                       type: object
@@ -324,15 +331,15 @@ paths:
                           type: string
                         timestamp:
                           type: number
-                      example:
-                        { count: 150000, [{ hash: "54a335f6a103a2e6dfca30f03c436451507a6f7efe6c3358199f55f449587110",
-                                            nonce: 4646587,
-                                            shard: "Shard 2",
-                                            epoch: 322,
-                                            tx_count: 4,
-                                            size: 1.345,
-                                            proposer: "Everstake",
-                                            timestamp: 1623945181 }]}
+              example:
+                { count: 150000, items:[{ hash: "54a335f6a103a2e6dfca30f03c436451507a6f7efe6c3358199f55f449587110",
+                                          nonce: 4646587,
+                                          shard: "Shard 2",
+                                          epoch: 322,
+                                          tx_count: 4,
+                                          size: 1.345,
+                                          proposer: "Everstake",
+                                          timestamp: 1623945181 }]}
         404:
           description: "Not found"
   /block/{hash}:
@@ -386,20 +393,19 @@ paths:
                     timestamp: 1623945181 }
         404:
           description: "Not found"
-  /block:
+  /block/{shard}/{nonce}:
     get:
       parameters:
-        - in: query
+        - in: path
           name: shard
           required: true
           schema:
             type: number
-        - in: query
+        - in: path
           name: nonce
           required: true
           schema:
             type: number
-          example: {shard: 4294967295, nonce: 4646587}
       tags:
         - "Blocks"
       summary: get block by shard and nonce
@@ -465,9 +471,9 @@ paths:
                   hash:
                     type: string
                   shard_from:
-                    type: string
+                    type: number
                   shard_to:
-                    type: string
+                    type: number
                   block_sender:
                     type: string
                   block_receiver:
@@ -510,9 +516,9 @@ components:
         status:
           type: string
         shard_from:
-          type: string
+          type: number
         shard_to:
-          type: string
+          type: number
         from:
           type: string
         to:
@@ -523,18 +529,22 @@ components:
           type: number
         type:
           type: string
+        gas_used:
+          type: number
+        miniblock_hash:
+          type: string
         timestamp:
           type: number
       example:
         { hash: "66b8a1431feed937202f6210f11c58e8b8028d433bf9724a1d68e728cc793a1c",
           status: "pending",
-          shard_from: "Metachain",
-          shard_to: "Shard 1",
+          shard_from: 1,
+          shard_to: 2,
           from: "erd16x7le8dpkjsafgwjx0e5kw94evsqw039rwp42m2j9eesd88x8zzs75tzry",
           to: "erd1v0kjtd6cl9zmjsjel3camkkduxdjvdlpxcg0hqz6t2ccq8vgfe9s9ffvj0",
-          value: 0.000035,
-          fee: 0.000035,
-          type: "delegate",
+          value: "0.000035",
+          fee: "0.000035",
+          miniblock_hash: "d9a9d31b0553c4d40a62b8e0fe9a8cf603d8d0eff3d609a40e44b361bbb5a659",
           timestamp: 1623945181 }
     success:
       type: object
