# smodels/account.go
@@ -10,5 +10,6 @@ type Account struct {
 	Undelegated      decimal.Decimal `json:"undelegated"`
 	RewardsClaimed   decimal.Decimal `json:"rewards_claimed"`
 	ClaimableRewards decimal.Decimal `json:"claimable_rewards"`
-	StakingProvider  string          `json:"staking_provider"`
+	StakingProvider  []string        `json:"staking_provider"`
+	CreatedAt        Time            `json:"created_at"`
 }
